tests/lean/emptyc.lean.expected.out
emptyc.lean:19:0-19:2: error: ambiguous, possible interpretations 
  ∅ : A
  
  { } : A
